--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,25 +9,25 @@
 </div>
 
 <app-statistics *hasClaim="'DB_STATISTICS'"></app-statistics>
-<app-dashboard-status-chart *hasClaim="'DB_BEST_SELLING_PROS'"></app-dashboard-status-chart>
+<app-dashboard-status-chart *hasClaim="['DB_TEAMWISEGRAPH','DB_STATUSWISEGRAPH']"></app-dashboard-status-chart>
 <!-- <app-best-selling-product *hasClaim="'DB_BEST_SELLING_PROS'"></app-best-selling-product> -->
 <!-- <app-calender-view *hasClaim="'DB_REMINDERS'"></app-calender-view> -->
 <!-- <app-latest-inquiry *hasClaim="'DB_LATEST_INQUIRIES'"></app-latest-inquiry> -->
 
 <div class="row">
   <div class="col-md-6">
-    <app-open-interaction-list *hasClaim="'DB_RECENT_SO_SHIPMENT'"></app-open-interaction-list>
+    <app-open-interaction-list *hasClaim="'DB_OPENSTATUS'"></app-open-interaction-list>
   </div>
   <div class="col-md-6">
-    <app-pending-interaction-list *hasClaim="'DB_RECENT_SO_SHIPMENT'"></app-pending-interaction-list>
+    <app-pending-interaction-list *hasClaim="'DB_PENDINGSTATUS'"></app-pending-interaction-list>
   </div>
   
   <div class="col-md-12">
-    <app-sales-order-expected-shipment *hasClaim="'DB_RECENT_SO_SHIPMENT'"></app-sales-order-expected-shipment>
+    <!-- <app-sales-order-expected-shipment ></app-sales-order-expected-shipment> -->
   </div>
   
   <div class="col-md-12">
-    <app-interaction-list-by-team *hasClaim="'DB_RECENT_SO_SHIPMENT'"></app-interaction-list-by-team>
+    <app-interaction-list-by-team *hasClaim="'DB_TEAMWISELIST'"></app-interaction-list-by-team>
   </div>
   
   <!-- <div class="col-md-6 mt-5">
