--- a/src/app/dashboard/open-interaction-list/open-interaction-list.component.html
+++ b/src/app/dashboard/open-interaction-list/open-interaction-list.component.html
@@ -9,19 +9,19 @@
       </div>
     </div>
     <div class="mat-elevation-z8">
-      <div class="table-responsive">
+      <div class="table-responsive mainHeight">
         <table [dir]="langDir" mat-table [dataSource]="dataSource" class="table table-bordered table-hover">
           <ng-container matColumnDef="interactionid">
             <th class="table-column-200" mat-header-cell *matHeaderCellDef>Interaction ID</th>
             <td class="table-column-200" mat-cell *matCellDef="let row"><a  routerLink="/interactions/edit-interactions/{{row?.id}}">{{row.interactionId}}</a> </td>
         </ng-container>
         <ng-container matColumnDef="interactiontype">
-          <th class="table-column-200" mat-header-cell *matHeaderCellDef>Interaction Type</th>
-          <td class="table-column-200" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell *matCellDef="let row"> {{row.interactionType}} </td>
+          <th class="table-column-150" mat-header-cell *matHeaderCellDef>Type</th>
+          <td class="table-column-150" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell *matCellDef="let row"> {{row.interactionType}} </td>
       </ng-container>
       <ng-container matColumnDef="assignto">
-          <th class="table-column-200" mat-header-cell *matHeaderCellDef>Assign To</th>
-          <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.teamName}} </td>
+          <th class="table-column-150" mat-header-cell *matHeaderCellDef>Assign To</th>
+          <td class="table-column-150" mat-cell *matCellDef="let row"> {{row.teamName}} </td>
       </ng-container>
       <ng-container matColumnDef="contant">
           <th class="table-column-200" mat-header-cell *matHeaderCellDef>Contact Name</th>
@@ -33,10 +33,10 @@
           <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.teamName}} </td>
       </ng-container>
       <ng-container matColumnDef="status">
-          <th class="table-column-200" mat-header-cell *matHeaderCellDef>
-              Interaction Status
+          <th class="table-column-150" mat-header-cell *matHeaderCellDef>
+            Status
           </th>
-          <td class="table-column-200" [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.interactionStatus=='OPEN'||row?.interactionStatus=='Open'?'open':row?.interactionStatus=='PENDING'?'pending':'resolved') "   mat-cell *matCellDef="let row"><span class="text-uppercase"> {{row?.interactionStatus}}</span></td>
+          <td class="table-column-150" [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.interactionStatus=='OPEN'||row?.interactionStatus=='Open'?'open':row?.interactionStatus=='PENDING'?'pending':'resolved') "   mat-cell *matCellDef="let row"><span class="text-uppercase"> {{row?.interactionStatus}}</span></td>
       </ng-container>
       <ng-container matColumnDef="substatus">
           <th class="table-column-300" mat-header-cell *matHeaderCellDef>Interaction Sub status</th>
@@ -44,8 +44,8 @@
           </td>
       </ng-container>
       <ng-container matColumnDef="category">
-          <th class="table-column-200" mat-header-cell *matHeaderCellDef>Category</th>
-          <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.category}}
+          <th class="table-column-300" mat-header-cell *matHeaderCellDef>Category</th>
+          <td class="table-column-300" mat-cell *matCellDef="let row"> {{row?.category}}
           </td>
       </ng-container>
       <ng-container matColumnDef="subcatagory">
@@ -74,8 +74,8 @@
           </td>
       </ng-container>
       <ng-container matColumnDef="createdat">
-          <th class="table-column-200" mat-header-cell *matHeaderCellDef>Created At</th>
-          <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.createdAt}}
+          <th class="table-column-150" mat-header-cell *matHeaderCellDef>Created At</th>
+          <td class="table-column-150" mat-cell *matCellDef="let row"> {{row.createdAt}}
           </td>
       </ng-container>
       <tr *matNoDataRow>
