--- a/src/app/inventory/add-interactions/add-interactions.component.html
+++ b/src/app/inventory/add-interactions/add-interactions.component.html
@@ -168,24 +168,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
-            <div class="form-group">
-                <mat-label>Error Message </mat-label>
-                <!-- <input type="text" class="form-control" placeholder="Please enter error message" id="errorCode"
-                    formcontrolName="errorCode"> -->
-                <mat-select formControlName="errorCode" placeholder="Please select error code" class="form-control">
-                    <mat-option *ngFor="let error of errorCodeList" [value]="error.id">
-                        {{error.name}}
-                    </mat-option>
-                </mat-select>
-                <mat-error [dir]="langDir"
-                    *ngIf="addInventoryForm.get('errorCode').touched && addInventoryForm.get('errorCode').errors?.required"
-                    class="text-danger">
-                    <!-- {{'PLEASE_SELECT_COUNTRY' | translate}} -->
-                    Please select error message.
-                </mat-error>
-            </div>
-        </div>
+        
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Source</mat-label>
@@ -202,6 +185,12 @@
                 </mat-error>
             </div>
         </div>
+        <div class="col-md-8">
+            <div class="form-group">
+                <mat-label>Subject</mat-label>
+               <input type="text" [readonly]="true" class="form-control" formControlName="subject" >
+            </div>
+        </div>
         <div class="col-md-4">
             <div class="example-action-buttons">
                 <button type="button" (click)="onSubmit()" class="btn btn-success btn-md mx-3 px-3 py-2"><i
@@ -213,19 +202,14 @@
                 </button>
             </div>
         </div>
-        <div class="col-md-12">
-            <div class="form-group">
-                <mat-label>Subject</mat-label>
-               <input type="text" [readonly]="true" class="form-control" formControlName="subject" >
-            </div>
-        </div>
+        
         <div class="col-md-12">
             <div class="form-group">
                 <mat-label>Problem Reported </mat-label>
                 <textarea maxlength="2000" 
-                    formControlName="problemReported1" class="form-control"></textarea>
+                    formControlName="problemReported" class="form-control"></textarea>
                 <mat-error [dir]="langDir"
-                    *ngIf="addInventoryForm.get('problemReported1').touched && addInventoryForm.get('problemReported1').errors?.required"
+                    *ngIf="addInventoryForm.get('problemReported').touched && addInventoryForm.get('problemReported').errors?.required"
                     class="text-danger">
                     Please enter problem reported.
                 </mat-error>
