--- a/src/app/inventory/add-inventory/add-inventory.component.html
+++ b/src/app/inventory/add-inventory/add-inventory.component.html
@@ -2,10 +2,14 @@
     <mat-tab label="General">
         <app-inventory-properties *ngIf="isEdit" (userId)="getUserId($event)" [userData]="userData" [id]="interationId" ></app-inventory-properties>
         <app-add-interactions *ngIf="!isEdit" [userData]="userData"></app-add-interactions></mat-tab>
-        <mat-tab *ngIf="isEdit" label="Interaction History"><app-interaction-history *ngIf="tabIndex==1"  [id]="interationId"></app-interaction-history></mat-tab>
-        <mat-tab *ngIf="isEdit" label="Notes"><app-interaction-notes *ngIf="tabIndex==2" [id]="interationId" ></app-interaction-notes> </mat-tab>
-        <mat-tab *ngIf="isEdit" label="Survey Questions"><app-survey-questions *ngIf="tabIndex==3" [id]="interationId"  ></app-survey-questions></mat-tab>
-        <mat-tab *ngIf="isEdit" label="Contacts"><app-customer-info *ngIf="tabIndex==4" [userData]="userData" [id]="contactId" ></app-customer-info></mat-tab>
+        <mat-tab *ngIf="isEdit" label="Email">
+<!-- <app-interaction-history *ngIf="tabIndex==1"  [id]="interationId"></app-interaction-history> -->
+email
+        </mat-tab>
+        <mat-tab *ngIf="isEdit" label="Interaction History"><app-interaction-history *ngIf="tabIndex==2"  [id]="interationId"></app-interaction-history></mat-tab>
+        <mat-tab *ngIf="isEdit" label="Notes"><app-interaction-notes *ngIf="tabIndex==3" [id]="interationId" ></app-interaction-notes> </mat-tab>
+        <mat-tab *ngIf="isEdit" label="Survey Questions"><app-survey-questions *ngIf="tabIndex==4" [id]="interationId"  ></app-survey-questions></mat-tab>
+        <mat-tab *ngIf="isEdit" label="Contacts"><app-customer-info *ngIf="tabIndex==5" [userData]="userData" [id]="contactId" ></app-customer-info></mat-tab>
 </mat-tab-group>
 
 
