--- a/src/app/dashboard/dashboard-teams-grid/dashboard-teams-grid.component.html
+++ b/src/app/dashboard/dashboard-teams-grid/dashboard-teams-grid.component.html
@@ -2,87 +2,43 @@
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
-                <!-- <h1>{{"PRODUCT_CATEGORIES" | translate}}</h1> -->
-                <h1>Team</h1>
+                <h1>Interaction list By Team</h1>
             </div>
         </div>
     </div>
 </div>
 
 <div>
-    <table [dir]="langDir" mat-table [dataSource]="queueList" multiTemplateDataRows
+    <table [dir]="langDir" mat-table [dataSource]="teamInteractionsList" multiTemplateDataRows
         class="table table-bordered table-hover grid-height w-100">
-        <ng-container matColumnDef="substatus">
-            <th mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell *matCellDef="let element">
-                <mat-icon class="cursor-pointer" *ngIf="element != expandedElement" (click)="toggleRow(element)">
-                    chevron_right</mat-icon>
-                <mat-icon class="cursor-pointer" *ngIf="element == expandedElement" (click)="toggleRow(element)">
-                    expand_more</mat-icon>
-            </td>
-        </ng-container>
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> {{'NAME' | translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <th mat-header-cell *matHeaderCellDef> Team Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.teamName}} </td>
         </ng-container>
-        <ng-container matColumnDef="status">
-            <!-- <th mat-header-cell *matHeaderCellDef> {{'DESCRIPTION' | translate}} </th> -->
-            <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.isEnabled?'Active':'In Active'}} </td>
+        <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef>Total </th>
+            <td mat-cell *matCellDef="let element">{{element?.total}} </td>
+        </ng-container>
+        <ng-container matColumnDef="open">
+            <th mat-header-cell *matHeaderCellDef>Open </th>
+            <td mat-cell *matCellDef="let element">{{element?.open}} </td>
+        </ng-container>
+        <ng-container matColumnDef="pending">
+            <th mat-header-cell *matHeaderCellDef>Pending </th>
+            <td mat-cell *matCellDef="let element">{{element?.pending}} </td>
+        </ng-container>
+        <ng-container matColumnDef="resolved">
+            <th mat-header-cell *matHeaderCellDef>Resolved </th>
+            <td mat-cell *matCellDef="let element">{{element?.resolved}} </td>
+        </ng-container>
+        <ng-container matColumnDef="closed">
+            <th mat-header-cell *matHeaderCellDef>Closed </th>
+            <td mat-cell *matCellDef="let element">{{element?.closed}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="expandedDetail">
-            <td mat-cell *matCellDef="let teamObject" [attr.colspan]="columnsToDisplay.length">
-                <div class="example-element-detail"
-                    [@detailExpand]="teamObject == expandedElement ? 'expanded' : 'collapsed'">
-                    <div class="inner-table mat-elevation-z8">
-                        <div class="row mb-3 align-items-center justify-content-between">
-                            <div class="col-md-auto col-sm-auto">
-                                <div class="section-title">
-                                    <!-- <h2>{{"SUB_CATEGORY" | translate}}</h2> -->
-                                    <h2>Members</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <table [dir]="langDir" mat-table [dataSource]="teamMembers" multiTemplateDataRows class="table w-100">
-                            <ng-container matColumnDef="action">
-                                <th style="width:40%" mat-header-cell *matHeaderCellDef>{{'ACTION' | translate}}
-                                </th>
-                                <td style="width:40%" mat-cell *matCellDef="let element">
-                                    <!-- <button *hasClaim="'MST_QUE_MEMBER'" (click)="manageMember(element)"
-                                        class="btn btn-success btn-sm m-right-10" type="button">
-                                        <i class="las la-pen"></i>
-                                        {{'EDIT' | translate}}
-                                    </button> -->
-                                    <button *hasClaim="'MST_QUE_MEMBER'" (click)="deleteMember(element)"
-                                        class="btn btn-danger btn-sm" type="button">
-                                        <i class="las la-trash"></i>
-                                        {{'DELETE' | translate}}
-                                    </button>
-                                </td>
-                            </ng-container>
-                            <ng-container matColumnDef="name">
-                                <th mat-header-cell *matHeaderCellDef> {{'NAME' | translate}} </th>
-                                <td mat-cell *matCellDef="let member"> {{getMembersName(member?.userId)}} </td>
-                            </ng-container>
-                           
-                            <ng-container matColumnDef="status">
-                                <!-- <th mat-header-cell *matHeaderCellDef> {{'DESCRIPTION' | translate}} </th> -->
-                                <th mat-header-cell *matHeaderCellDef> Status </th>
-                                <td mat-cell *matCellDef="let element"> {{element?.isEnabled?'Active':'In Active'}} </td>
-                            </ng-container>
-                            <tr mat-header-row *matHeaderRowDef="subCategoryColumnToDisplay;sticky: true"></tr>
-                            <tr mat-row *matRowDef="let row; columns: subCategoryColumnToDisplay;"></tr>
-                        </table>
-                    </div>
-                </div>
-            </td>
-        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" [ngClass]="expandedElement? '' : 'd-none'" class="example-detail-row"></tr>
     </table>
 </div>
 
